5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1582_996.log
== TEST (2019-03-12 17:30:26) 
-- CODE:
print("*****")
print("(* o o * )")
print("*  ^  *  ")
print("* --- *  ")
print("*****")
-- OUTPUT:
*****
(* o o * )
*  ^  *  
* --- *  
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:30:49) 
-- CODE:
print("*****")
print("(* o o * )"
print("*  ^  *  ")
print("* --- *  ")
print("*****")
-- ERROR:
File "XXXX", line 3
    print("*  ^  *  ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:02) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *  ")
print("* --- *  ")
print("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *  
* --- *  
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:10) 
-- CODE:
print("  *****")
print("(* o o *)")
print("*  ^  *  ")
print("* --- *  ")
print("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *  
* --- *  
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:32) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- *  ")
print(" *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  * 
 * --- *  
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:31:38) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- *  ")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  * 
 * --- *  
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:32:06) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  * ")
print(" * --- *  ")
print("  *****")
-- EXECUTION TIME:
0.190812
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  * 
 * --- *  
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
